Bug #75257, fix worksheet column header wrapping in Angular @for

--- a/web/projects/portal/src/app/composer/gui/ws/editor/ws-details-table-data.component.scss
+++ b/web/projects/portal/src/app/composer/gui/ws/editor/ws-details-table-data.component.scss
@@ -37,6 +37,7 @@
 .ws-table-headers {
   position: relative;
   z-index: 1;
+  display: flex;
 }
 
 .table-data {
